--- a/00.md
+++ b/00.md
@@ -26,7 +26,7 @@
 
 我来告诉你为什么？
 
-你知道一件事吗？安得斯‧艾瑞克森本人虽然研究了很多刻意练习，但是在他的人生中，他并没有专精哪一项技能。他喜欢读书、写作。但是他跟一般人一样，并没有任何专精的兴趣、嗜好，任何一项顶尖的技能。
+你知道一件事吗？安得斯‧艾瑞克森本人虽然研究了很多刻意练习，但是在他的人生中，他并没有专精哪一项技能。他喜欢读书、写作。但是他跟一般人一样，并没有任何专精的兴趣、嗜好，没有练成任何一项顶尖的技能。
 
 这样的一个「普通人」教你「刻意练习变专家」。你不会觉得很怪吗？难怪这本书的读者会在读这本书的时候，觉得这本书里面的每一个字都「政治正确」，但是却练不起来，不仅书中的步骤叙述模糊，练起来更让人容易放弃。
 
